--- a/src/internal/exploring/style/toolbar.css
+++ b/src/internal/exploring/style/toolbar.css
@@ -2,38 +2,24 @@
 @import "./serverStateIndicator.css";
 @import "./fileExecutionIndicator.css";
 
-footer {
-  display: table-row;
-  width: 100%;
-  height: 40px;
-  background: #404040;
-  transition: transform;
-  transform: translate3d(0, 0, 0);
-  transition-duration: 300ms;
-}
-
-footer[data-visible] {
-  transform: translate3d(0, 40px, 0);
-  transition-duration: 300ms;
-}
-
-footer a {
-  display: inline-block;
-}
-
-footer {
+#toolbar {
   display: table;
+  width: 100%;
+  height: 100%;
+  background: #404040;
 }
 
-footer > * {
-  display: table-cell !important;
+#toolbar > * {
+  display: table-cell;
   vertical-align: middle;
 }
 
-footer button {
+#toolbar button {
   background: none;
   border: none;
   height: 100%;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .jsenvLogo {
